<?xml version="1.0"?>
<package>
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>local_planner</description>
  <maintainer email="jdservos@todo.todo">jdservos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nasa_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nasa_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>
</package>
